<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google LLC. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:updateHomeViews="@{subscriptionViewModel.subscriptions}">

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_small_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondaryColor"
                    android:onClick="@{() -> billingViewModel.openPlayStoreSubscriptions()}"
                    app:cardCornerRadius="@dimen/small_card_corner_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/home_restore_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:textColor="@color/secondaryTextColor" />

                        <TextView
                            android:id="@+id/home_grace_period_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:text="@string/grace_period_message"
                            android:textColor="@color/secondaryTextColor" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_main_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/home_transfer_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="vertical">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> subscriptionViewModel.transferSubscriptions()}"
                                android:text="@string/transfer_button_text"
                                android:theme="@style/ButtonTheme" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/transfer_message" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_account_hold_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/account_hold_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> billingViewModel.openAccountHoldSubscription()}"
                                android:text="@string/fix_button_text"
                                android:theme="@style/ButtonTheme" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                android:src="@drawable/account_hold_rain_taxi_1200x560" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/activity_vertical_margin"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"
                                android:text="@string/account_hold_message" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_basic_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:updateBasicContent="@{subscriptionViewModel.basicContent}">

                            <ImageView
                                android:id="@+id/home_basic_image"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/home_basic_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginTop="@dimen/activity_vertical_margin"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"
                                android:text="@string/basic_message" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_paywall_message"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="vertical">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> billingViewModel.buyBasic()}"
                                android:text="@string/basic_button_text"
                                android:theme="@style/ButtonTheme" />

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> billingViewModel.buyPremium()}"
                                android:text="@string/premium_button_text"
                                android:theme="@style/ButtonTheme" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/paywall_message" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:loadingProgressBar="@{subscriptionViewModel.loading}" />

        </FrameLayout>

    </ScrollView>

    <data>

        <import type="android.view.View" />

        <variable
            name="billingViewModel"
            type="com.example.android.classytaxijava.ui.BillingViewModel" />

        <variable
            name="subscriptionViewModel"
            type="com.example.android.classytaxijava.ui.SubscriptionStatusViewModel" />
    </data>

</layout>
