<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google LLC. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:updatePremiumViews="@{subscriptionViewModel.subscriptions}">

                <!-- TODO implement grace period and restore -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/premium_main_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- TODO implement account transfer -->

                        <!-- TODO implement account hold -->

                        <LinearLayout
                            android:id="@+id/premium_premium_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:updatePremiumContent="@{subscriptionViewModel.premiumContent}">

                            <ImageView
                                android:id="@+id/premium_premium_image"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/premium_premium_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginTop="@dimen/activity_vertical_margin"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"
                                android:text="@string/premium_message" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/premium_paywall_message"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:orientation="vertical">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="@{() -> billingViewModel.buyPremium()}"
                                android:text="@string/premium_button_text"
                                android:theme="@style/ButtonTheme" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/premium_paywall_message" />

                        </LinearLayout>

                        <!-- TODO implement upgrade -->

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:loadingProgressBar="@{subscriptionViewModel.loading}" />

        </FrameLayout>

    </ScrollView>

    <data>
        <variable
            name="billingViewModel"
            type="com.example.android.classytaxijava.ui.BillingViewModel" />

        <variable
            name="subscriptionViewModel"
            type="com.example.android.classytaxijava.ui.SubscriptionStatusViewModel" />
    </data>

</layout>
